# cc-deep-eval

./: .gitignore  Dockerfile  Dockerfile.egress  Dockerfile.gradient  Dockerfile.pysyft  Dockerfile.pysyft-spike  README.md  ctx_probe.py  diag_probe.py  egress_service.py  entrypoint_egress.sh  entrypoint_pysyft.sh  gradient_server.py  ledger_admin.py  pysyft_datasite_server.py  pysyft_datasite_spike_server.py  pysyft_diag_server.py  register_auditors.py  register_endpoints.py  tinfoil-config-egress.yml  tinfoil-config-pysyft.yml  tinfoil-config.gradient.yml  tinfoil-config.yml
.github/workflows/: build-image.yml  tinfoil-build.yml
pysyft_endpoints/anomaly/: plot_request_distribution.py
pysyft_endpoints/endpoints/: _common.py  apply_steering.py  capture_attention_stats.py  capture_residual_stream.py  capture_routing.py
pysyft_endpoints/ledger/: engagement_ledger.py  schema.sql
runs/phase1_sanity/: benign.npz  generations.json  pairs.json  raw_first_benign.json  toxic.npz
runs/phase2_d6_steering/: direction_L62.npy  direction_diagnostics.json  error_sign-1_alpha4.json  generations.json  raw_baseline.json
runs/phase2_smoke/: raw_p0_benign.json  timing.json
runs/phase2_validation/baseline/: aggregate.json  generations.json
runs/phase2_validation/gradient/: aggregate.json  generations.json  gradient_check.json  gradient_diagnostics.json  pairs.json  raw_first_benign.json  raw_first_toxic.json
runs/phase2_validation/repe_bundle/: aggregate.json  benign_attention.npz  entropy_check.json  entropy_diagnostics.json  residual_diagnostics.json  (+1 more)
scripts/: build_pairs.py  captures.py  captures_gradients.py  client_requirements.txt  d6_steering.py  gradient_server.py  inspect_entropy.py  phase2_capture.py  phase2_smoke.py  routing_coverage.py  sanity_check.py  setup_phase2.sh  test_captures_smoke.py
vllm_lens_ext/: pyproject.toml
vllm_lens_ext/vllm_lens/: __init__.py  _activations_plugin.py  _gradient_backend.py  _gradient_entry.py  _inspect_entry.py  _routing_ext.py  _worker_ext.py  attention_stats.py  inspect_provider.py  phase2_recon.py  phase2_smoke.py  test_attention_stats.py  types_additions.py
vllm_lens_ext/vllm_lens/_helpers/: _serialize.py  types.py
(+4 files in other folders)
