[project]
name = "vllm-lens"
version = "1.1.0+phase2"
description = "vLLM plugin for interacting with activations during inference (Phase 2 fork)"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "vllm>=0.16.0",
    "zstandard>=0.23.0",
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["vllm_lens"]

[project.entry-points."vllm.general_plugins"]
activations = "vllm_lens._activations_plugin:register"

[project.entry-points.inspect_ai]
vllm_lens = "vllm_lens._inspect_entry"